fix：支持C++语言前，对之前的代码进行保存