@@ -1,105 +1,115 @@
-package com.luoying;
+package com.luoying.template.old;
 
 import cn.hutool.core.io.FileUtil;
-import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
-import cn.hutool.dfa.FoundWord;
-import cn.hutool.dfa.WordTree;
+import com.luoying.core.CodeSandBox;
 import com.luoying.model.ExecuteCodeRequest;
 import com.luoying.model.ExecuteCodeResponse;
 import com.luoying.model.ExecuteMessage;
 import com.luoying.model.QuestionSubmitJudgeInfo;
-import com.luoying.utils.ProcessUtils;
+import com.luoying.utils.old.ProcessUtils;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
-/**
- * Java原生代码沙箱
- */
-public class JavaNativeCodeSandBox_Old implements CodeSandBox {
+@Slf4j
+public abstract class JavaCodeSandBoxTemplate implements CodeSandBox {
     private static final String GLOBAL_CODE_DIR_NAME = "tempCode";
 
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
 
-    private static final String SECURITY_MANAGER_PATH = "E:\\Learn\\workspace\\luooj\\luooj-code-sandbox\\src\\main\\resources\\security";
-
-    private static final String SECURITY_MANAGERR_CLASS_NAME = "MySecurityManager";
-
     private static final long TIMEOUT = 5000L;
 
-    private static final List<String> blackList = Arrays.asList("Files", "read", "write", "exec");
-
-    private static final WordTree WORD_TREE;
-
-    static {
-        // 校验代码中是否包含黑名单中的命令 初始化字典树
-        WORD_TREE = new WordTree();
-        WORD_TREE.addWords(blackList);
-    }
-
-    public static void main(String[] args) {
-        JavaNativeCodeSandBox_Old javaNativeCodeSandBox = new JavaNativeCodeSandBox_Old();
-        ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
-        executeCodeRequest.setInputList(Arrays.asList("1 2", "3 4"));
-        String code = ResourceUtil.readStr("testCode/SimpleComputeArgs/SimpleComputeArgs.java", StandardCharsets.UTF_8);
-        // String code = ResourceUtil.readStr("testCode/SimpleCompute/SimpleCompute.java", StandardCharsets.UTF_8);
-        // 程序异常情况
-        // String code = ResourceUtil.readStr("testCode/unsafeCode/SleepError.java", StandardCharsets.UTF_8);
-        // String code = ResourceUtil.readStr("testCode/unsafeCode/MemoryError.java", StandardCharsets.UTF_8);
-        // String code = ResourceUtil.readStr("testCode/unsafeCode/ReadFileError.java", StandardCharsets.UTF_8);
-        // String code = ResourceUtil.readStr("testCode/unsafeCode/WriteFileError.java", StandardCharsets.UTF_8);
-        // String code = ResourceUtil.readStr("testCode/unsafeCode/RunFileError.java", StandardCharsets.UTF_8);
-
-        executeCodeRequest.setCode(code);
-        executeCodeRequest.setLanguage("java");
-        ExecuteCodeResponse executeCodeResponse = javaNativeCodeSandBox.executeCode(executeCodeRequest);
-        System.out.println(executeCodeResponse);
-    }
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
-        List<String> inputList = executeCodeRequest.getInputList();
-        String code = executeCodeRequest.getCode();
-        String language = executeCodeRequest.getLanguage();
-        // 校验代码中是否包含黑名单中的命令
-        FoundWord foundWord = WORD_TREE.matchWord(code);
-        if (foundWord != null) {
-            System.out.println("包含禁止词：" + foundWord.getFoundWord());
-            return null;
-        }
+        File userCodeFile = null;
+        ExecuteCodeResponse executeCodeResponse = null;
+        try {
+            List<String> inputList = executeCodeRequest.getInputList();
+            String code = executeCodeRequest.getCode();
+            String language = executeCodeRequest.getLanguage();
+            // 1. 把用户的代码保存为文件
+            userCodeFile = saveCodeFile(code);
 
-        // 1. 把用户的代码保存为文件
+            // 2. 编译代码，得到 class 文件
+            ExecuteMessage compileCodeFileExecuteMessage = compileCodeFile(userCodeFile);
+            System.out.println(compileCodeFileExecuteMessage);
+
+            // 3. 执行代码，得到输出结果
+            List<ExecuteMessage> executeMessageList = runCodeFile(userCodeFile, inputList);
+            // 4. 收集整理输出结果
+            executeCodeResponse = getOutputResponse(executeMessageList);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        } finally {
+            // 5. 文件清理，释放空间
+            boolean b = deleteFile(userCodeFile);
+            if (!b) {
+                log.error("deleteFile error userCodeFilePath={}", userCodeFile.getAbsolutePath());
+            }
+        }
+        return executeCodeResponse;
+    }
+
+
+    /**
+     * 1. 把用户的代码保存为文件
+     *
+     * @param code
+     * @return
+     */
+    public File saveCodeFile(String code) {
+
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
         // 判断全局代码目录是否存在，没有则新建
         if (!FileUtil.exist(globalCodePathName)) {
-            File file = FileUtil.mkdir(globalCodePathName);
+            FileUtil.mkdir(globalCodePathName);
         }
         // 把用户的代码隔离存放
         String userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
         String userCodePath = userCodeParentPath + File.separator + GLOBAL_JAVA_CLASS_NAME;
         File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
+        return userCodeFile;
+    }
 
-        // 2. 编译代码，得到 class 文件
+    /**
+     * 2. 编译代码
+     *
+     * @param userCodeFile
+     * @return
+     */
+    public ExecuteMessage compileCodeFile(File userCodeFile) {
         String complieCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
         try {
             Process compileProcess = Runtime.getRuntime().exec(complieCmd);
             ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
-            System.out.println(executeMessage);
+            if (executeMessage.getExitValue() != 0) {
+                throw new RuntimeException("编译错误");
+            }
+            return executeMessage;
         } catch (Exception e) {
-            return getErrorResponse(e);
+            // return getErrorResponse(e);
+            throw new RuntimeException(e);
         }
+    }
 
-        // 3. 执行代码，得到输出结果
+    /**
+     * 3. 执行字节码文件，获得执行结果列表
+     *
+     * @param inputList
+     * @return
+     */
+    public List<ExecuteMessage> runCodeFile(File userCodeFile, List<String> inputList) {
+        String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String input : inputList) {
-            String runCmd = String.format("java -Xmx256m -Dfile.encoding=utf-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGERR_CLASS_NAME, input);
-
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=utf-8 -cp %s Main %s", userCodeParentPath, input);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
                 // 超时控制
@@ -113,14 +123,22 @@ public class JavaNativeCodeSandBox_Old implements CodeSandBox {
                     }
                 }).start();
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
-                // ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, input);
                 System.out.println(executeMessage);
                 executeMessageList.add(executeMessage);
             } catch (Exception e) {
-                return getErrorResponse(e);
+                throw new RuntimeException("程序执行异常，" + e);
             }
         }
-        // 4. 收集整理输出结果
+        return executeMessageList;
+    }
+
+    /**
+     * 4. 获取输出结果
+     *
+     * @param executeMessageList
+     * @return
+     */
+    public ExecuteCodeResponse getOutputResponse(List<ExecuteMessage> executeMessageList) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
         // 一组输入用例中某个用例执行时长的最大值，便于判断是否超时
@@ -141,24 +159,35 @@ public class JavaNativeCodeSandBox_Old implements CodeSandBox {
         }
         executeCodeResponse.setOutputList(outputList);
         // 表示正常运行完成
-        if (outputList.size() == inputList.size()) {
+        if (outputList.size() == executeMessageList.size()) {
             executeCodeResponse.setStatus(2);
         }
         QuestionSubmitJudgeInfo questionSubmitJudgeInfo = new QuestionSubmitJudgeInfo();
         questionSubmitJudgeInfo.setTime(maxTime);
-        // 要借助第三方库来获取内存占用，非常麻烦，此处不做实现
-        // questionSubmitJudgeInfo.setMemory();
         executeCodeResponse.setJudgeInfo(questionSubmitJudgeInfo);
-
-        // 5. 文件清理，释放空间
-        if (userCodeFile.getParentFile() != null) {
-            boolean del = FileUtil.del(userCodeParentPath);
-            System.out.println("删除" + (del ? "成功" : "失败"));
-        }
         return executeCodeResponse;
     }
 
-    // 6. 错误处理，提升程序健壮性
+    /**
+     * 5. 删除文件
+     *
+     * @param userCodeFile
+     * @return
+     */
+    public boolean deleteFile(File userCodeFile) {
+        if (userCodeFile.getParentFile() != null) {
+            String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
+            boolean del = FileUtil.del(userCodeParentPath);
+            System.out.println("删除" + (del ? "成功" : "失败"));
+            return del;
+        }
+        return true;
+    }
+
+
+    /**
+     * 6. 错误处理，提升程序健壮性
+     */
     private ExecuteCodeResponse getErrorResponse(Throwable e) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         executeCodeResponse.setOutputList(new ArrayList<>());
